# geant4_exercises

./: .gitignore  CMakeLists.txt  save_file.mac
LaBr3/: LaBr3.cc
LaBr3/include/: DetectorConstruction.hh  PrimaryGeneratorAction.hh  SensitiveDetector.hh
LaBr3/src/: DetectorConstruction.cc  EventAction.cc  RunAction.cc
LaBr_multi/: LaBr3.cc
LaBr_multi/include/: DetectorConstruction.hh  EventAction.hh  Hit.hh  PrimaryGeneratorAction.hh  RootSaver.hh  RunAction.hh  StackingAction.hh
LaBr_multi/src/: DetectorConstruction.cc  Hit.cc  PrimaryGeneratorAction.cc  RootSaver.cc  SensitiveDetector.cc  StackingAction.cc
esp_fattore_geometrico/: CMakeLists.txt  analyse.py  analyseSpinDecay.py  muon.mac  muonFast.mac  script.py  task3b.cc  task3b.mac
esp_fattore_geometrico/include/: Analysis.hh  DetectorConstruction.hh  MyActionInitialization.hh
esp_fattore_geometrico/src/: Analysis.cc  DetectorConstruction.cc  MyActionInitialization.cc  PhysicsList.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc
esperimento/: Analysis.cc  Analysis.hh  CMakeLists.txt  EventAction.cc  EventAction.hh  MyField.cc  MyField.hh  StackingAction.cc  StackingAction.hh  Trigger.cc  Trigger.hh  analyseDecay.py  analyseMaterial.cpp  analyseMaterialDecay.py  analyseNtupleMaterial.py  analyseSpinDecay.py  asymmetry_confronto.py  muon.mac  task3b.cc
esperimento/include/: Analysis.hh  DetectorConstruction.hh  HistoManager.hh  MyActionInitialization.hh  MyHit.hh  MyRun.hh  PhysicsList.hh  RunAction.hh  SensitiveDetector.hh
esperimento/src/: Analysis.cc  DetectorConstruction.cc  HistoManager.cc  MyActionInitialization.cc  MyHit.cc  MyRun.cc  PhysicsList.cc  RunAction.cc  SensitiveDetector.cc  StackingAction.cc  SteppingAction.cc
task8/Rx_Interaction/: CMakeLists.txt  RX_Interaction_GEM.C  absorption.C  backup.C  electrons.C  script.py
(+88 files in other folders)
